@@ -19,6 +19,7 @@
 * Fixed the method name leak from FileUtils (bug found by Glenn
   Vanderburg). 
 * Added rake_extension to handle detection of extension collisions.
+* Added test for noop, bad_option and verbose flags to sh command.
 
 == Version 0.7.1
 
